# eresmicapricho

./: .gitignore  README.md  pyproject.toml
backend/: app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/assets/styles/: App.css  LanguageSwitcher.css  Layout.css  Logo.css  Navbar.css
frontend/src/components/: LanguageSwitcher.jsx  Layout.jsx  Logo.jsx  Navbar.jsx
frontend/src/i18n/: en.json  es.json  i18n.js  jp.json  zh.json
frontend/src/pages/: Homepage.jsx
