[tool.poetry]
name = "eresmicapricho"
version = "0.1.0"
description = "Personal website with blog"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.1.0"
flask-cors = "^5.0.0"
boto3 = "^1.35.87"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
